# rs3-contracts

./: .gitignore  LICENSE  README.md  pyproject.toml
src/rs3_contracts/: __init__.py  api.py  core2_generic.py  types.py
src/rs3_contracts/dataset_schema/: rs3_dataset_v1.yaml
tests/: test_api_minimal.py
