[project]
name = "rs3-contracts"
version = "1.0.0"
description = "Contracts (interfaces, schemas) for the RoadSimulator3 ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sébastien Edet" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10", "ruff>=0.5"]

[tool.setuptools.package-data]
"rs3_contracts.dataset_schema" = ["*.yaml"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
strict = false

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["rs3_contracts*"]

[project.urls]
Homepage = "https://github.com/SebE585/rs3-contracts"
Issues = "https://github.com/SebE585/rs3-contracts/issues"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Active un set de règles utiles (équivalent flake8 + import tidy)
select = ["E", "F", "I"]
# Autorise Ruff à appliquer des fixes sûrs (imports inutiles, ordre, etc.)
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Exemple : autoriser des imports de test non utilisés
"tests/**.py" = ["F401"]